--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@ header {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 1%;
+    align-items: stretch;
+   
 
 }
 
@@ -52,13 +55,58 @@ header {
 }
 
 .card-column {
-    width: 33.333%;
+    width: 31.33%;
+    margin-bottom: 55px;
 }
+
+.card {
+    border: 1.5px dashed var(--light);
+    padding: 15px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.card h2, .card p{
+    color: var(--primary);
+
+}
+
+.card p {
+    margin-bottom: 15px;
+
+}
+
+.card-header {
+    background-color: var(--background);
+    position: absolute;
+    top: -20px;
+    left: 0;
+    border: 1px solid var(--light);
+    padding: 4px;
+    
+}
+
+.code-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
+    background: linear-gradient(45deg, var(--primary) 0%, #883860 100%);
+    padding: 15px;
+}
+
+
+
+
+
+
 /* media queries */
 /* tablet */
 @media (max-width: 840px) {
     .card-column {
-        width: 50%;
+        width: 49%;
     }
 
 }
